--- a/ergokey_V01/config.yaml
+++ b/ergokey_V01/config.yaml
@@ -74,21 +74,21 @@ points:
             splay: -35
             origin: [-11.75, -9]
             column_net: P006
-            row_net: P113  # You can choose an available row net
+            row_net: P111  # You can choose an available row net
         far:
           key:
             spread: 21.25
             splay: -28
             origin: [-9.5, -9]
             column_net: P008
-            row_net: P111  # Same row net if desired
+            row_net: P113  # Same row net if desired
 
     #   rows:
     #     thumb:
   # rotate: -5
-  #mirror:
-   # ref: matrix_pinky_home
-    # distance: 223.7529778
+  mirror:
+   ref: matrix_sixth_home
+   distance: 80
 outlines:
   keys:
     - where: true
@@ -123,7 +123,7 @@ pcbs:
     footprints:
       choc_hotswap:
         what: choc
-        where: /^matrix_.*|thumb/
+        where: /^matrix_.*|^thumb/
         params:
           keycaps: true
           reverse: false
@@ -205,23 +205,23 @@ pcbs:
 
       # Reset switch (horizontal community version)
       # this switch footprint does not work with kicad (added manually)
-      #horizontal_reset:
-      #  what: EVQPUC
-      #  params: 
-      #    #side: B
-      #    from: GND
-      #    to: RST 
-      #  where:
-      #    ref: matrix_sixth_top
-      #    shift: [9.0, 2.8]
-      #    rotate: -90.0
+      horizontal_reset:
+       what: EVQPUC
+       params: 
+         #side: B
+         from: GND
+         to: RST 
+       where:
+         ref: matrix_sixth_top
+         shift: [9.0, 2.8]
+         rotate: -90.0
           
       # Battery on/off switch
       battery_switch:
         what: slider
         where:
             ref: matrix_sixth_top
-            shift: [8.8, -6.0]
+            shift: [10.8, -6.0]
             rotate: -90
         params:
             side: B
@@ -255,18 +255,6 @@ pcbs:
         where:
           ref: matrix_fourth_bottom
           shift: [-pushX, pushY]
-      # Write "Caldera" on the PCB
-      front_text: &text
-        what: text
-        where: &textWhere
-            ref: matrix_fourth_num
-            shift: [-8.7, 5.5]
-        params: &textParams
-            text: Atonadias
-            justify: left
-            h_size: 3.0
-            v_size: 3.0
-            thickness: 0.4
 
 
       nice_nano:
@@ -277,6 +265,160 @@ pcbs:
           ref: matrix_sixth_num
           shift: [-9, -1.5]
           rotate: -180.0
+
+  right:
+    outlines:
+      main:
+        outline: board_right
+    footprints:
+      choc_hotswap:
+        what: choc
+        where: /^mirror_matrix_.*|mirror_thumb/
+        params:
+          keycaps: true
+          reverse: false
+          hotswap: true
+          from: "{{column_net}}"
+          to: "{{colrow}}"
+        adjust:
+        # Rotate the key switches upside-down (easier to fit controller that way)
+          rotate: 180
+      # Main diodes
+      diode_main:
+        what: diode
+        where: /^mirror_matrix_(?!(?:sixth_top|sixth_home|third_home|first_num|fourth_top|fourth_mod|first_home)).*/
+        params:
+          from: "{{colrow}}"
+          to: "{{row_net}}"
+        adjust:
+          shift: [7.8, -3.5]
+          rotate: 90
+      # Thumb diodes
+      diode_thumb:
+        what: diode
+        where: /^mirror_thumb_.*/
+        params:
+          from: "{{colrow}}"
+          to: "{{row_net}}"
+        adjust:
+          shift: [7.8, -3.5]
+          rotate: 90
+      diode_weird1:
+        what: diode
+        where: mirror_matrix_sixth_top
+        params:
+          from: "{{colrow}}"
+          to: "{{row_net}}"
+        adjust:
+          shift: [7.8, -16.0]
+          rotate: 90
+      # Move another diode so it doesn't conflict with controller
+      diode_weird2:
+        what: diode
+        where: mirror_matrix_sixth_home
+        params:
+          from: "{{colrow}}"
+          to: "{{row_net}}"
+        adjust:
+          shift: [7.8, -9.5]
+          rotate: 90
+
+      diode_mounting_hole_conflict1:
+        what: diode
+        where: /^mirror_matrix_(?:third_home|first_num|first_home)/
+        params:
+          from: "{{colrow}}"
+          to: "{{row_net}}"
+        adjust:
+          shift: [7.8, 3.5]
+          rotate: 90
+      diode_mounting_hole_conflict2:
+        what: diode
+        where: /^mirror_matrix_(?:fourth_top|fourth_mod)/
+        params:
+          from: "{{colrow}}"
+          to: "{{row_net}}"
+        adjust:
+          shift: [7.8, -4.5]
+          rotate: 90
+
+      # # Battery jack
+      jstph:
+        what: jstph
+        where:
+          ref: mirror_matrix_fourth_home
+          shift: [-7, 5.5]
+          rotate: 90
+        params:
+            side: B
+            pos: pos
+            neg: GND
+
+      # Reset switch (horizontal community version)
+      # this switch footprint does not work with kicad (added manually)
+      horizontal_reset:
+       what: EVQPUC
+       params: 
+         #side: B
+         from: GND
+         to: RST 
+       where:
+         ref: mirror_matrix_sixth_top
+         shift: [9.0, 2.8]
+         rotate: -90.0
+          
+      # Battery on/off switch
+      battery_switch:
+        what: slider
+        where:
+            ref: mirror_matrix_sixth_top
+            shift: [10.8, -6.0]
+            rotate: -90
+        params:
+            side: B
+            from: pos
+            to: RAW
+
+
+      # Mounting holes
+      hole_bottom_right:
+        what: mountinghole
+        where:
+          ref: mirror_matrix_sixth_bottom
+          shift: [-pushX, pushY]
+      hole_bottom_left:
+        what: mountinghole
+        where:
+          ref: mirror_matrix_first_home
+          shift: [pushX, -pushY]
+      hole_top_left:
+        what: mountinghole
+        where:
+          ref: mirror_matrix_second_num
+          shift: [-pushX, -pushY]
+      hole_top_right:
+        what: mountinghole
+        where:
+          ref: mirror_matrix_fifth_top
+          shift: [-pushX, pushY]
+      hole_center:
+        what: mountinghole
+        where:
+          ref: mirror_matrix_fourth_bottom
+          shift: [-pushX, pushY]
+
+
+      nice_nano:
+        what: nice_nano
+        params:
+          orientation: up
+        where:
+          ref: mirror_matrix_sixth_num
+          shift: [-9, -1.5]
+          rotate: -180.0
+
+
+
 cases:
   plate:
     - name: xl_board_key_cutouts
