--- a/ergokey_V01/config.yaml
+++ b/ergokey_V01/config.yaml
@@ -2,7 +2,6 @@ units:
   px: cx + 8
   py: cy + 8
 
-
   pushX: (cx / 2)
   pushY: (cy / 2)
 
@@ -74,14 +73,14 @@ points:
             splay: -35
             origin: [-11.75, -9]
             column_net: P006
-            row_net: P111  # You can choose an available row net
+            row_net: P115  # You can choose an available row net
         far:
           key:
             spread: 21.25
             splay: -28
             origin: [-9.5, -9]
             column_net: P008
-            row_net: P113  # Same row net if desired
+            row_net: P115  # Same row net if desired
 
     #   rows:
     #     thumb:
@@ -94,7 +93,7 @@ outlines:
     - where: true
       what: rectangle
       size: [14, 14]
-      fillet: 0
+      fillet: 6
   board_left:
     - where: true
       what: rectangle
@@ -208,7 +207,7 @@ pcbs:
       horizontal_reset:
        what: EVQPUC
        params: 
-         #side: B
+         side: B
          from: GND
          to: RST 
        where:
@@ -250,11 +249,11 @@ pcbs:
         where:
           ref: matrix_fifth_top
           shift: [-pushX, pushY]
-      hole_center:
-        what: mountinghole
-        where:
-          ref: matrix_fourth_bottom
-          shift: [-pushX, pushY]
+      # hole_center:
+      #   what: mountinghole
+      #   where:
+      #     ref: matrix_fourth_bottom
+      #     shift: [-pushX, pushY]
 
 
       nice_nano:
@@ -273,7 +272,7 @@ pcbs:
     footprints:
       choc_hotswap:
         what: choc
-        where: /^mirror_matrix_.*|mirror_thumb/
+        where: /^mirror_matrix_(?!(?:sixth_top)).*|mirror_thumb/
         params:
           keycaps: true
           reverse: false
@@ -284,71 +283,103 @@ pcbs:
         # Rotate the key switches upside-down (easier to fit controller that way)
           rotate: 180
       # Main diodes
+      choc_hotswap_conflict:
+        what: choc 
+        where: mirror_matrix_sixth_top
+        params:
+          keycaps: true
+          reverse: false
+          hotswap: true
+          from: "{{column_net}}"
+          to: "{{colrow}}"
+        adjust:
+          rotate: 90
+
       diode_main:
         what: diode
-        where: /^mirror_matrix_(?!(?:sixth_top|sixth_home|third_home|first_num|fourth_top|fourth_mod|first_home)).*/
+        #where: /^mirror_matrix_(?!(?:sixth_top|sixth_home|third_home|first_num|fourth_top|fourth_mod|first_home)).*/
+        where: /^mirror_matrix_(?!(?:sixth_num|sixth_top|fifth_num|fifth_top)).*|mirror_thumb/
         params:
           from: "{{colrow}}"
           to: "{{row_net}}"
         adjust:
-          shift: [7.8, -3.5]
-          rotate: 90
+          shift: [-3, 5]
+          rotate: 180
       # Thumb diodes
-      diode_thumb:
+      # diode_thumb:
+      #   what: diode
+      #   where: /^mirror_thumb_.*/
+      #   params:
+      #     from: "{{colrow}}"
+      #     to: "{{row_net}}"
+      #   adjust:
+      #     shift: [7.8, -3.5]
+      #     rotate: 90
+      diode_weird1:
         what: diode
-        where: /^mirror_thumb_.*/
+        where: mirror_matrix_sixth_num
         params:
           from: "{{colrow}}"
           to: "{{row_net}}"
         adjust:
-          shift: [7.8, -3.5]
+          shift: [-8, -2]
           rotate: 90
-      diode_weird1:
+      # Move another diode so it doesn't conflict with controller
+      diode_weird2:
+        what: diode
+        where: mirror_matrix_fifth_num
+        params:
+          from: "{{colrow}}"
+          to: "{{row_net}}"
+        adjust:
+          shift: [0, 7]
+          rotate: 0
+
+      diode_weird3:
+        what: diode
+        where: mirror_matrix_fifth_top
+        params:
+          from: "{{colrow}}"
+          to: "{{row_net}}"
+        adjust:
+          shift: [-7.7, -2]
+          rotate: 90
+      diode_weird4:
         what: diode
         where: mirror_matrix_sixth_top
         params:
           from: "{{colrow}}"
           to: "{{row_net}}"
         adjust:
-          shift: [7.8, -16.0]
-          rotate: 90
-      # Move another diode so it doesn't conflict with controller
-      diode_weird2:
-        what: diode
-        where: mirror_matrix_sixth_home
-        params:
-          from: "{{colrow}}"
-          to: "{{row_net}}"
-        adjust:
-          shift: [7.8, -9.5]
+          shift: [5, 0]
           rotate: 90
 
-      diode_mounting_hole_conflict1:
-        what: diode
-        where: /^mirror_matrix_(?:third_home|first_num|first_home)/
-        params:
-          from: "{{colrow}}"
-          to: "{{row_net}}"
-        adjust:
-          shift: [7.8, 3.5]
-          rotate: 90
-      diode_mounting_hole_conflict2:
-        what: diode
-        where: /^mirror_matrix_(?:fourth_top|fourth_mod)/
-        params:
-          from: "{{colrow}}"
-          to: "{{row_net}}"
-        adjust:
-          shift: [7.8, -4.5]
-          rotate: 90
+      # diode_mounting_hole_conflict1:
+      #   what: diode
+      #   where: /^mirror_matrix_(?:third_home|first_num|first_home)/
+      #   params:
+      #     from: "{{colrow}}"
+      #     to: "{{row_net}}"
+      #   adjust:
+      #     shift: [7.8, 3.5]
+      #     rotate: 90
+      # diode_mounting_hole_conflict2:
+      #   what: diode
+      #   where: /^mirror_matrix_(?:fourth_top|fourth_mod)/
+      #   params:
+      #     from: "{{colrow}}"
+      #     to: "{{row_net}}"
+      #   adjust:
+      #     shift: [7.8, -4.5]
+      #     rotate: 90
 
       # # Battery jack
       jstph:
         what: jstph
         where:
           ref: mirror_matrix_fourth_home
-          shift: [-7, 5.5]
-          rotate: 90
+          shift: [-10, 0]
+          rotate: -90
         params:
             side: B
             pos: pos
@@ -359,12 +390,12 @@ pcbs:
       horizontal_reset:
        what: EVQPUC
        params: 
-         #side: B
+         side: B
          from: GND
          to: RST 
        where:
          ref: mirror_matrix_sixth_top
-         shift: [9.0, 2.8]
+         shift: [11.0, 2.8]
          rotate: -90.0
           
       # Battery on/off switch
@@ -401,11 +432,11 @@ pcbs:
         where:
           ref: mirror_matrix_fifth_top
           shift: [-pushX, pushY]
-      hole_center:
-        what: mountinghole
-        where:
-          ref: mirror_matrix_fourth_bottom
-          shift: [-pushX, pushY]
+      # hole_center:
+      #   what: mountinghole
+      #   where:
+      #     ref: mirror_matrix_fourth_bottom
+      #     shift: [-pushX, pushY]
 
 
       nice_nano:
@@ -415,7 +446,7 @@ pcbs:
         where:
           ref: mirror_matrix_sixth_num
           shift: [-9, -1.5]
-          rotate: -180.0
+          rotate: 0.0
 
 
 
